Make source compatible with Java 8 (#1100)
* Make source compatible with Java 8

There are some future projects that will require building on Java 8, so
just make these minor mechanical changes to enable us to target Java 8
easily in the future.

Development environments don't need to change since the Java compiler
and maven allow us to target an older Java version even though we are on
a newer compiler.

* athena-kafka and athena-msk: pagination clean up and fixes

Improve the way we consume pagination from Glue and also fix a bug with
the pagination passthrough to the user for getting doListTables