@@ -57,11 +57,11 @@ public class FilterExpressionBuilderTest
     public void testGetExpressions()
     {
         Map<String, java.util.Optional<java.util.Set<String>>> result = FilterExpressionBuilder.getConstraintsForPartitionedColumns(
-            List.of(new Column().withName("year")),
+            com.google.common.collect.ImmutableList.of(new Column().withName("year")),
             new Constraints(createSummaryWithLValueRangeEqual("year", new ArrowType.Utf8(), "1")));
         assertEquals(result.size(), 1);
-        assertEquals(result.get("year").get(), java.util.Set.of("1"));
-        assertEquals(result.get("yeAr").get(), java.util.Set.of("1"));
+        assertEquals(result.get("year").get(), com.google.common.collect.ImmutableSet.of("1"));
+        assertEquals(result.get("yeAr").get(), com.google.common.collect.ImmutableSet.of("1"));
     }
 
     public static Map<String, ValueSet> createSummaryWithLValueRangeEqual(String fieldName, ArrowType fieldType, Object fieldValue)
@@ -72,7 +72,7 @@ public class FilterExpressionBuilderTest
 
         Mockito.when(block.getFieldReader(anyString())).thenReturn(fieldReader);
         Marker low = Marker.exactly(new BlockAllocatorImpl(), new ArrowType.Utf8(), fieldValue);
-        return Map.of(
+        return com.google.common.collect.ImmutableMap.of(
                 fieldName, SortedRangeSet.of(false, new Range(low, low))
         );
     }
